--- a/style.css
+++ b/style.css
@@ -1,31 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 
 body {
-    font-family: 'Comfortaa', cursive;
+    position: relative;
+    font-family: "Comfortaa", cursive;
     background-color: #fffdf9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     margin: 0;
     padding: 0;
     background-image: url(images/scattered-forcefields\ \(1\).svg);
     background-position: cover;
+    backdrop-filter: blur(2px);
+  }
+  
+nav {
+    padding: 10px 120px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav-logo h1 {
+    width: 120px;
+}
+
+nav h1 {
+    background: linear-gradient(45deg, #c0392b, #8e44ad);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+h1 span {
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+.nav-items ul {
+    gap: 30px;
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-items li {
+    display: inline-block;
 }
 
 header {
-    width: 500px;
-    height: 600px;
+    display: flex;
+    width: 100%;
+    height: 550px;
+    justify-content: center;
+    align-items: center;
 }
 
-h1{
+h1 {
     width: 100%;
     text-align: center;
     color: #333;
     margin-bottom: 10px;
 }
+
 h2 {
     width: 100%;
     text-align: center;
@@ -33,8 +72,8 @@ h2 {
     margin-bottom: 30px;
 }
 
-#weather-info{
-    margin-bottom: 40px;
+#weather-info {
+    margin-bottom: 60px;
 }
 
 #weather-info p {
@@ -42,9 +81,10 @@ h2 {
     font-weight: 400;
     margin: 15px 0;
     font-weight: 500;
+    color: #585858;
 }
 
-.inp-but{
+.inp-but {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -53,9 +93,9 @@ h2 {
 
 #search-input {
     padding: 10px 20px;
-    outline:none;
+    outline: none;
     font-size: 16px;
-    width: 200px;
+    width: 260px;
     border: 1px solid #c0c0c0;
     border-radius: 50px;
     -webkit-border-radius: 50px;
@@ -64,14 +104,14 @@ h2 {
     -o-border-radius: 50px;
 }
 
-#search-input:hover{
-    outline:none;
+#search-input:hover {
+    outline: none;
 }
 
 #search-button {
-    padding: 10px 20px;
+    padding: 10px 25px;
     font-size: 16px;
-    background-color: #46b87d;
+    background-color: rgb(75, 179, 125);
     color: white;
     border: none;
     cursor: pointer;
@@ -80,10 +120,29 @@ h2 {
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
+    transition: background-color 0.3s ease;
+    -webkit-transition: background-color 0.3s ease;
+    -moz-transition: background-color 0.3s ease;
+    -ms-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
 }
 
+#search-button:hover {
+    background-color: rgb(57, 157, 105);
+}
 
+footer {
+    position: absolute;
+    bottom: 1px;
+    left: 33%;
+}
 
+footer p {
+    font-size: 12px;
+    color: #585858;
+}
 
-
-
+footer .last-logo{
+    font-weight: 800;
+    color: black;
+}
