--- a/style.css
+++ b/style.css
@@ -179,3 +179,34 @@ footer .last-logo{
 }
 
 
+@media  screen and (max-width: 650px){
+    nav {
+        padding: 10px 20px;
+    }
+    header div{
+        width: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    #search-input {
+        padding: 8px 16px;
+        outline: none;
+        font-size: 16px;
+        width: 260px;
+    }
+    #weather-info{
+        width: 350px;
+        margin: 5px 0;
+    }
+    h1, h2{
+        width: 350px;
+    }
+    footer{
+        padding: 10px 20px;
+        left: 2%;
+        right: 2%;
+        text-align: center;
+    }
+}
